--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 streamlit = "^1.30.0"
 pandas = "^2.1.4"
 plotly = "^5.18.0"
+loguru = "^0.7.2"
 
 
 [tool.poetry.group.dev.dependencies]
