--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
+pytest = "^7.4.4"
 
 [build-system]
 requires = ["poetry-core"]
