--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -59,7 +59,7 @@ jobs:
 
   build:
     needs: test
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -77,4 +77,5 @@ jobs:
         with:
           context: .
           push: true
+          platforms: linux/amd64, linux/arm64
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/stream-budget:latest
